# notifications

./: .env.example  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: github.yml
docs/: notifications.puml
migrations/: env.py
migrations/versions/: 2023_01_07_1647_b6dba8f39c4d_init.py
migrations/versions/data_versions/: core.py  data_script.py.mako
src/: main.py
src/core/: config.py
src/core/crud/: base.py  retrieve.py
src/dependencies/: auth.py
src/internal/notifications/: handlers.py  notifications.py
src/internal/templates/: environment.py  templates.py  variables.py  wrapping.py
src/models/: __init__.py  base.py  notifications.py
src/routes/v1/: notifications.py  templates.py
src/schemas/: notifications.py  templates.py
src/tasks/: __init__.py  core.py  notifications.py
src/tools/: email_sender.py
src/utils/: db_session.py  utils.py  validators.py
tests/endpoints/: conftest.py
tests/endpoints/core/: constants.py  types.py
tests/endpoints/templates/: requests.py  test_templates.py
tests/endpoints/utils/: containers.py  requests.py
